<resources>

    <string name="app_name">ShipMate</string>
    <string name="intro_text">Welcome to ShipMate!</string>
    <string name="to_text">To:</string>
    <string name="from_text">From:</string>
    <string name="textbox_text">Enter Postal Code</string>
    <string name="address_text">Address</string>
    <string name="run_button_text">Run</string>
    <string name="res">Find to location</string>
    <string name="history_button_text">View History</string>
    
	
</resources>
